spacing fixes for header, bigger logo

--- a/mpact.css
+++ b/mpact.css
@@ -41,6 +41,9 @@ a:hover {
   clear: both;
 }
 
+img {
+  border: 0;
+}
 
 /* ---( text )------------------------------- */
 
@@ -86,7 +89,7 @@ p a:hover {
 
 .navtextlinks {
   display: block;
-  padding-top: 20px;
+  padding-top: 0px;
   padding-bottom: 20px;
   font-size: 16px;
   font-weight: bold;
